# feasibility-study

./: runDetectorScripts  runGeneratorScripts  startGUIs
configure/: RELEASE
etc/: builder.py
etc/makeDocumentation/: manual.src
etc/makeIocs/: Makefile.iocs  percivalConfigurator.xml  percivalDetector.xml  percivalDetector01.xml  percivalDetector02.xml  percivalDetector03.xml  percivalDetector04.xml  percivalDetector05.xml  percivalDetector06.xml  percivalDetector07.xml  percivalDetector08.xml  percivalDetector_RELEASE  percivalExample.xml  percivalGenerator.xml  percivalGenerator01.xml  percivalGenerator02.xml  percivalGenerator03.xml  percivalGenerator04.xml  percivalGenerator05.xml  percivalGenerator06.xml  percivalGenerator07.xml  percivalGenerator08.xml  percivalGeneratorMaster.xml  percivalGeneratorMaster_RELEASE
iocs/: Makefile
percivalApp/Db/: ADPercivalDriver.template  ADPercivalDriverChannel.template  Makefile  PercivalConfigurator.template  (+3 more)
test/TestThroughputMulti/: .cproject  .gitignore  .project  CMakeLists.txt
test/TestThroughputMulti/config/: Log4CxxConfig.config  Log4CxxConfig_tx.config  ttm.config  ttm_2rx2tx_rr.config  ttm_4rx4tx_parallel.config  ttm_8rx8tx_parallel.config  ttm_8rx8tx_rr.config
test/TestThroughputMulti/include/: TestThroughputMulti.h  configFileParser.h  nodeConfig.h
test/TestThroughputMulti/scripts/: gatherLogs.py  nodeCounters.py  pdaqControl.sh  switchCounters.py  ttm_wrapper
test/TestThroughputMulti/src/: CMakeLists.txt  TestThroughputMulti.c  TestThroughputMulti.cpp  appMain.cpp  configFileParser.c
(+96 files in other folders)
